objects/WT_Coverage_Action_Plan_Task__mdt.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_Template__c</fullName>
        <label>Action Plan Template</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Classification__c</fullName>
        <label>Classification</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Days_for_Due_Date_for_Next_Task__c</fullName>
        <label>Days for Due Date for Next Task</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_of_Tasks__c</fullName>
        <label>Number of Tasks</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Coverage Action Plan Task</label>
    <pluralLabel>Coverage Action Plan Tasks</pluralLabel>
</CustomObject>